Build documentation: (ab8b186) Add parameters domain, solver, timestep, finaltime
