# implementors/schemars/trait.JsonSchema.js
@@ -1,3 +1,3 @@
 (function() {var implementors = {};
-implementors["dpsim_api"] = [{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.Simulation.html\" title=\"struct dpsim_api::routes::Simulation\">Simulation</a>","synthetic":false,"types":["dpsim_api::routes::Simulation"]},{"text":"impl JsonSchema for <a class=\"enum\" href=\"dpsim_api/routes/enum.SimulationType.html\" title=\"enum dpsim_api::routes::SimulationType\">SimulationType</a>","synthetic":false,"types":["dpsim_api::routes::SimulationType"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.SimulationForm.html\" title=\"struct dpsim_api::routes::SimulationForm\">SimulationForm</a>","synthetic":false,"types":["dpsim_api::routes::SimulationForm"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.SimulationError.html\" title=\"struct dpsim_api::routes::SimulationError\">SimulationError</a>","synthetic":false,"types":["dpsim_api::routes::SimulationError"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/amqp/struct.AMQPSimulation.html\" title=\"struct dpsim_api::amqp::AMQPSimulation\">AMQPSimulation</a>","synthetic":false,"types":["dpsim_api::amqp::AMQPSimulation"]}];
+implementors["dpsim_api"] = [{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.Simulation.html\" title=\"struct dpsim_api::routes::Simulation\">Simulation</a>","synthetic":false,"types":["dpsim_api::routes::Simulation"]},{"text":"impl JsonSchema for <a class=\"enum\" href=\"dpsim_api/routes/enum.SimulationType.html\" title=\"enum dpsim_api::routes::SimulationType\">SimulationType</a>","synthetic":false,"types":["dpsim_api::routes::SimulationType"]},{"text":"impl JsonSchema for <a class=\"enum\" href=\"dpsim_api/routes/enum.DomainType.html\" title=\"enum dpsim_api::routes::DomainType\">DomainType</a>","synthetic":false,"types":["dpsim_api::routes::DomainType"]},{"text":"impl JsonSchema for <a class=\"enum\" href=\"dpsim_api/routes/enum.SolverType.html\" title=\"enum dpsim_api::routes::SolverType\">SolverType</a>","synthetic":false,"types":["dpsim_api::routes::SolverType"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.SimulationForm.html\" title=\"struct dpsim_api::routes::SimulationForm\">SimulationForm</a>","synthetic":false,"types":["dpsim_api::routes::SimulationForm"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.SimulationError.html\" title=\"struct dpsim_api::routes::SimulationError\">SimulationError</a>","synthetic":false,"types":["dpsim_api::routes::SimulationError"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/amqp/struct.AMQPSimulation.html\" title=\"struct dpsim_api::amqp::AMQPSimulation\">AMQPSimulation</a>","synthetic":false,"types":["dpsim_api::amqp::AMQPSimulation"]}];
 if (window.register_implementors) {window.register_implementors(implementors);} else {window.pending_implementors = implementors;}})()
